--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MailKit" Version="3.5.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
     <PackageReference Include="MimeKit" Version="3.5.0" />
     <PackageReference Include="Otp.NET" Version="1.3.0" />
