add member features

--- a/MovieTicket/appsettings.json
+++ b/MovieTicket/appsettings.json
@@ -1,9 +1,9 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=192.168.1.10;userid=root;password=vubamanh;port=3306;database=netflopdb"
+    "DefaultConnection": ""
   },
   "MailSettings": {
-    "DisplayName": "Netflop",
+    "DisplayName": "MovieTicket",
     "Host": "smtp.gmail.com",
     "Mail": "manhvb.135010121046@vtc.edu.vn",
     "Password": "",
