--- a/MovieTicket/appsettings.json
+++ b/MovieTicket/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=movieticketserver.mysql.database.azure.com;userid=movieticketadmin;password=Vumanh2003;port=3306;database=movieticketdb"
+    "DefaultConnection": ""
   },
   "MailSettings": {
     "DisplayName": "MovieTicket",
